tests/ui/missing_field.stderr
error[E0063]: missing field `b` in initializer of `Foo`
  --> $DIR/missing_field.rs:13:26
   |
13 |     let _foo = pin_init!(Foo { a: 0 });
   |                          ^^^ missing `b`

error[E0063]: missing field `b` in initializer of `Foo`
  --> $DIR/missing_field.rs:14:30
   |
14 |     let _foo = try_pin_init!(Foo { a: 0 }? ::std::convert::Infallible);
   |                              ^^^ missing `b`

error[E0063]: missing field `b` in initializer of `Foo`
  --> $DIR/missing_field.rs:15:22
   |
15 |     let _foo = init!(Foo { a: 0 });
   |                      ^^^ missing `b`

error[E0063]: missing field `b` in initializer of `Foo`
  --> $DIR/missing_field.rs:16:26
   |
16 |     let _foo = try_init!(Foo { a: 0 }? ::std::convert::Infallible);
   |                          ^^^ missing `b`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0063`.
